fix content-wrap for mobile to display content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,6 +208,7 @@ footer {
 @media only screen and (min-width: 601px) and (max-width: 900px) {
 	.content-wrap {
 		padding: 20px;
+		max-width: 80%;
 	}
 
 	.text-side {
